fix: remove unknown osx module